--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "module": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx --yes esbuild index.ts --bundle --platform=neutral --external:react --external:react-redux --external:redux --external:immer --external:proxy-memoize --outdir=dist",
+    "one": "deno run --allow-read --allow-env --allow-run scripts/esbuild.js "
   },
   "repository": {
     "type": "git",
