--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/hayond/create-hooks-slice#readme",
   "dependencies": {
-    "immer": "^9.0.14"
+    "immer": "^9.0.14",
+    "proxy-memoize": "^1.1.0"
   },
   "peerDependencies": {
     "react": "^17",
