feat:add deno support

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "module": "index.ts",
   "scripts": {
     "build": "npx --yes esbuild index.ts --bundle --platform=neutral --external:react --external:react-redux --external:redux --external:immer --external:proxy-memoize --outdir=dist",
-    "one": "deno run --allow-read --allow-env --allow-run scripts/esbuild.js "
+    "mod": "deno run --allow-read --allow-env --allow-run scripts/esbuild.js "
   },
   "repository": {
     "type": "git",
