--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -14,5 +14,5 @@ jobs:
     - name: npm-publish
       uses: JS-DevTools/npm-publish@v1
       with:
-        token: ${{ secrets.NPM_TOKEN }}
+        token: ${{ secrets.NPM_AUTH_TOKEN }}
         access: public
