--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
+    - run: npm install
     - run: npm run build
     - name: npm-publish
       uses: JS-DevTools/npm-publish@v1
