--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - name: node
+      uses: actions/setup-node@v3
     - run: npm install
     - run: npm run build
     - name: npm-publish
