--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "@babel/core": "^7.18.5",
     "@babel/plugin-syntax-typescript": "^7.17.12",
     "@babel/plugin-transform-typescript": "^7.18.4",
+    "react": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "typescript": "^4.7.4"
   }
 }
